@@ -1,3 +1,14 @@
+2013-02-21  Allan Sandfeld Jensen  <allan.jensen@digia.com>
+
+        [Qt] Replace QWebPageAdaptor::TouchAdjuster
+        https://bugs.webkit.org/show_bug.cgi?id=110226
+
+        Reviewed by Antonio Gomes.
+
+        * WebCoreSupport/QWebPageAdapter.cpp:
+        (QWebPageAdapter::adjustPointForClicking):
+        * WebCoreSupport/QWebPageAdapter.h:
+
 2013-02-15  Allan Sandfeld Jensen  <allan.jensen@digia.com>
 
         Simplify hitTestResultAtPoint and nodesFromRect APIs
